# munch

./: README.md  pyproject.toml
src/munch/: ai.py  cli.py  db.py
