[project]
name = "munch"
version = "0.1.0"
description = "A macro-aware eating assistant for people who eat out a lot"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "requests>=2.34.2",
    "openai>=1.0.0",
]

[project.scripts]
munch = "munch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munch"]
