[project]
name = "munch"
version = "0.1.0"
description = "A macro-aware eating assistant for people who eat out a lot"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.scripts]
munch = "munch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munch"]
