[project]
name = "munch"
version = "0.1.1"
description = "A macro-aware eating assistant for people who eat out a lot"
requires-python = ">=3.8"
dependencies = [
    "click>=7.0",
    "requests>=2.20.0",
    "openai>=1.0.0",
]

[project.scripts]
munch = "munch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munch"]
